# wos

./: .flake8  Makefile  README.md  pyproject.toml
dictionary/silicon_valley/csv/: silicon_valley_1x01_en_ru.csv
scripts/: config.py  dev.ipynb  tokenization.ipynb
