[tool.poetry]
name = "wos"
version = "0.1.0"
description = "Words On Screen"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
nltk = "^3.8.1"
pandas = "^2.1.3"
spacy = "^3.7.2"
translate = "^3.6.1"
openpyxl = "^3.1.2"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
  \.eggs
  |\.git
  | .*_pb2.py
  |\.mypy_cache
  |\.venv
  |venv
)
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
